k8s/applications/ui-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-admin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-admin
  template:
    metadata:
      labels:
        app: ui-admin
    spec:
      containers:
      - name: ui-admin
        image: webtruyenacr2855.azurecr.io/ui-admin:f95f0f90e7e97bee0365867eaeb901f07073060c
        ports:
        - containerPort: 3000
