k8s/applications/ui-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-admin
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ui-admin
  ports:
  - port: 3000
    targetPort: 3000
